<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/experienceLevel"
        android:layout_width="288dp"
        android:layout_height="77dp"
        android:layout_marginTop="24dp"
        android:digits="0-100"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePerSession"
        tools:text="@string/expLevel" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="285dp"
        android:layout_height="49dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/userName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/daysExercise"
        android:layout_width="286dp"
        android:layout_height="77dp"
        android:layout_marginTop="24dp"
        android:digits="1-7"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        tools:text="@string/daysExercise" />

    <EditText
        android:id="@+id/timePerSession"
        android:layout_width="287dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:digits="0-24"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daysExercise"
        tools:text="@string/timePerWorkout" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="193dp"
        android:layout_height="112dp"
        android:layout_marginBottom="104dp"
        android:text="@string/submit"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>